<resources>
    <string name="app_name">MsPlayBook</string>
    <string name="main_access_control">Access control is not installed on this device</string>
    <string name="main_ac_btn">Open Access Control</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_sync_summary">Sync Summary</string>
    <string name="version">Version</string>
    <string name="coming_soon">Coming Soon…</string>
    <string name="go_back">Go Back</string>
    <string name="fertilizer_1_pt_1">% of Fertilizer 1 Completed</string>
    <string name="fertilizer_2_pt_1">% of Fertilizer 2 Completed</string>
    <string name="hg_pt_1">% of Fields have issues</string>
    <string name="schedule_pt_1">% of Fields have threshed</string>
    <string name="out_of">out of</string>
    <string name="sentence_close">fields.)</string>
    <string name="sentence_close_hg">fields have HGs.)</string>
    <string name="sentence_close_pws">have been affected by poor weather.)</string>
    <string name="set_portfolio">This activity allow supervisors select staff under their portfolio</string>
    <string name="set_fertilizer_sign_up">This activity allow staff recruit members for the fertilizer program</string>
    <string name="strange_activity">Please contact your supervisors before using this activity</string>
    <string name="downloading_data">Syncing Data</string>
    <string name="please_wait">Please wait…</string>
    <string name="update">Update</string>
    <string name="update_portfolio">Update Portfolio</string>
    <string name="search">Search…</string>
    <string name="all_staff">All Staff</string>
    <string name="added_staff">Added Staff</string>
    <string name="set_portfolio_title">Set Portfolio</string>
    <string name="pws_title">Poor Weather Support</string>
    <string name="fert_1_title">Fertilizer 1</string>
    <string name="fert_2_title">Fertilizer 2</string>
    <string name="HG_title">HG Log</string>
    <string name="poor_weather_support_title">Poor Weather Support</string>
    <string name="download_staff_list">Download Staff List</string>
    <string name="home_place_holder">Home</string>
    <string name="search_button">Search</string>
    <string name="log_visitation">Log Visit</string>
    <string name="log_activity">Log Activity</string>
    <string name="field_r_id">Field R ID</string>
    <string name="member_r_id">Member R ID:</string>
    <string name="member_name">Member Name:</string>
    <string name="ik_number">IK Number:</string>
    <string name="member_phone_number">Phone Number:</string>
    <string name="field_size">Field Size:</string>
    <string name="member_village">Village:</string>
    <string name="member_crop_type">Crop Type:</string>
    <string name="field_longitude">Longitude</string>
    <string name="field_latitude">Latitude</string>
    <string name="log_fertilizer_1">Log Fert. 1</string>
    <string name="log_fertilizer_2">Log Fert. 2</string>
    <string name="reset_fertilizer_1">Reset Fert. 1</string>
    <string name="reset_fertilizer_2">Reset Fert. 2</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="call">Call</string>
    <string name="fert_1_question">Are you sure you want to log fertilizer 1 on this farm?</string>
    <string name="fert_2_question">Are you sure you want to log fertilizer 2 on this farm?</string>
    <string name="fert_1_reset_question">Are you sure you want to remove fertilizer 1 log on this farm?</string>
    <string name="fert_2_reset_question">Are you sure you want to remove fertilizer 2 log on this farm?</string>
    <string name="wrong_location">Sorry you are at the wrong location</string>
    <string name="call_question">Do You want to call</string>
    <string name="contact_member">Member Contact</string>
    <string name="hg_list_header">HG LIST</string>
    <string name="rf_list_header">RF LIST</string>
    <string name="pws_list_header">POOR WEATHER SUPPORT CLAIM LIST</string>
    <string name="select_valid_hg">Please select a valid HG activity</string>
    <string name="hg_autocomplete_hint">Enter HG or Solve</string>
    <string name="hg_button_text">Update HG List</string>
    <string name="select_portfolio_before_downloading">Please select portfolio before downloading</string>
    <string name="select_portfolio_before_deleting">Please select staff to remove before deleting records</string>
    <string name="attention">ATTENTION</string>
    <string name="confirm_set_portfolio">Are you sure you have selected all staff in portfolio?</string>
    <string name="confirm_deleting_portfolio">Are you sure you want to delete all these staff records?</string>
    <string name="set_portfolio_before_sync">Please set portfolio before syncing records</string>
    <string name="log_hg_question">Please enter your preferred HG or Solve HG activity</string>
    <string name="log_hg">Update HG Activity</string>
    <string name="static_ik_number">IK Number</string>
    <string name="static_village">Village</string>
    <string name="static_member_id">Member ID</string>
    <string name="static_member_name">Member Name</string>
    <string name="static_field_id">Field ID</string>
    <string name="confirm">Confirm</string>
    <string name="filter_fields">Filter Fields</string>
    <string name="view">View</string>
    <string name="load_all_fields">Search all fields</string>
    <string name="visitation_logged">Visitation Logged</string>
    <string name="exit_app">Please click BACK again to exit</string>
    <string name="click_sync_message">Please click SYNC to start using this application</string>
    <string name="change_date">Change Date</string>
    <string name="turn_location_on">Enable Location</string>
    <string name="wrong_date_title">Wrong Date/Time</string>
    <string name="location_off_title">Phone Location Disabled</string>
    <string name="wrong_date_msg">Wrong date/time detected. Kindly correct phone date in order to use this application.</string>
    <string name="location_off_msg">Phone location Disabled. Kindly enable location in order to use this application.</string>
    <string name="show_all_hgs">SHOW ALL HGs</string>
    <string name="show_all_rfs">SHOW ALL RFs</string>
    <string name="show_all_pws">SHOW ALL PWS Claims</string>
    <string name="hide_all_hgs">HIDE ALL HGs</string>
    <string name="hide_all_rfs">HIDE ALL RFs</string>
    <string name="hide_all_pws">HIDE ALL PWS Claims</string>
    <string name="solve_hg_message_2">for this field?</string>
    <string name="solve_hg_message_1_2">Do you want to confirm solving this</string>
    <string name="solve_hg_message_1_1">Do you want to solve this</string>
    <string name="table_name">Table name</string>
    <string name="time">Last Sync Time:</string>
    <string name="remarks">Remarks:</string>
    <string name="error_solve_hg">You cannot solve this HG</string>
    <string name="sync_summary_title">Sync Summary</string>
    <string name="hg_field_list_title">Field List (HG)</string>
    <string name="pws_field_list_title">Field List (P.W.S.)</string>
    <string name="field_list_title">Field List</string>
    <string name="bottom_sheet_state">State:</string>
    <string name="bottom_sheet_lga">LGA:</string>
    <string name="bottom_sheet_ward">Ward:</string>
    <string name="bottom_sheet_village">Village:</string>
    <string name="bottom_sheet_cc_center">Har. Collection Point:</string>
    <string name="state">State</string>
    <string name="lga">LGA</string>
    <string name="ward">Ward</string>
    <string name="harvest_cc_center">Har. Collection Point</string>
    <string name="harvest_cc_center_title">Harvest Collection Center</string>
    <string name="error_message_state">Please select state</string>
    <string name="error_message_lga">Please select LGA</string>
    <string name="error_message_ward">Please select ward</string>
    <string name="error_harvest_collection_point_location">Please select harvest collection center</string>
    <string name="dialog_congrats">CONGRATULATIONS</string>
    <string name="harvest_collection_point_success">Harvest collection center saved successfully</string>
    <string name="harvest_cc_request">Harvest collection center not found, please add harvest collection point.</string>
    <string name="harvest_cc_edit_request">Harvest collection center added, would you like to edit?</string>
    <string name="oops">Oops</string>
    <string name="harvest_cc_edit_locked">Sorry you cannot edit your harvest collection center at this time.</string>
    <string name="collection_center_finish">Save Collection Point</string>
    <string name="hg_type">HG Types</string>
    <string name="select_hg_type">Select HG Type</string>
    <string name="select_rf_type">Select RF Type</string>
    <string name="select_hg_sub_type">Select HG Sub Types</string>
    <string name="log_hg_activity">Log/Solve HG Activity</string>
    <string name="log_pws_activity">Log PWS Activity</string>
    <string name="log_rf_activity">Log/Solve RF Activity</string>
    <string name="log_solve_hg">Log/Solve HG</string>
    <string name="log_solve_rf">Log/Solve RF</string>
    <string name="pws_summary">Poor Weather Support Summary</string>
    <string name="error_message_hg_type">Please select HG type</string>
    <string name="error_message_rf_type">Please select RF type</string>
    <string name="error_message_hg_sub_type">Please select HG sub type</string>
    <string name="activity_enter_date">Enter activity date</string>
    <string name="activity_confirm_date">Confirm activity date</string>
    <string name="error_message_enter_date">Please enter date</string>
    <string name="error_message_confirm_date">Please confirm entered date</string>
    <string name="error_date_abnormal">Please date should be within 15th of May and 15th of August and not greater than today</string>
    <string name="error_date_mismatch">Confirm activity date mismatch</string>
    <string name="take_picture">Take Picture</string>
    <string name="take_location_picture">You are close to the field location, please take picture of the field</string>
    <string name="pws_id">PWS ID</string>
    <string name="claim_category">Claim Category:</string>
    <string name="pws_size">PWS Size:</string>
    <string name="pws_date_logged">Date Logged:</string>
    <string name="pws_date_reviewed">Date Reviewed:</string>
    <string name="pws_no_issues_found">No Issues Found</string>
    <string name="pws_take_picture_preamble">Please click on capture to take 4 clear pictures of the affected area from different angles</string>
    <string name="pws_log_picture1">Picture 1.jpg</string>
    <string name="pws_log_picture2">Picture 2.jpg</string>
    <string name="pws_log_picture3">Picture 3.jpg</string>
    <string name="pws_log_picture4">Picture 4.jpg</string>
    <string name="pws_log_capture">CAPTURE</string>
    <string name="pws_map_area">MAP</string>
    <string name="pws_mapped_area">X.XX HA</string>
    <string name="mik_claim_description">Claim Description</string>
    <string name="pws_submit">SUBMIT CLAIM</string>
    <string name="select_pws_category">Category</string>
    <string name="error_message_pws_category">Poor weather support category empty</string>
    <string name="endMap">End Mapping Session</string>
    <string name="mappingField">Mapping Field</string>
    <string name="endMapSession">End mapping session</string>
    <string name="theFieldA">The field you mapped has an area of</string>
    <string name="theFieldA2">  hectares.</string>
    <string name="saveDet">Yes, save details</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit_question">Are you sure you want to submit?</string>
    <string name="thresh_date">Threshing date</string>
    <string name="phone_number">Phone number</string>
    <string name="location">Location</string>
    <string name="thresh_staff">Thresher ID:</string>
</resources>