<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/harvest_cc_confirmation_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_layout"
    android:orientation="vertical"
    android:padding="8dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:drawablePadding="5dp"
                android:text="@string/bottom_sheet_state"
                android:textSize="18sp"
                android:id="@+id/state"
                android:textColor="@color/text_color_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:drawablePadding="5dp"
                android:text="@string/bottom_sheet_lga"
                android:textSize="18sp"
                android:id="@+id/lga"
                android:textColor="@color/text_color_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:drawablePadding="5dp"
                android:text="@string/bottom_sheet_ward"
                android:textSize="18sp"
                android:id="@+id/ward"
                android:textColor="@color/text_color_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:drawablePadding="5dp"
                android:text="@string/bottom_sheet_cc_center"
                android:textSize="18sp"
                android:id="@+id/village"
                android:textColor="@color/text_color_black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:drawablePadding="5dp"
                android:text="@string/state"
                android:textSize="18sp"
                android:id="@+id/bottom_sheet_state"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/text_color_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:drawablePadding="5dp"
                android:text="@string/lga"
                android:textSize="18sp"
                android:id="@+id/bottom_sheet_lga"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/text_color_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:drawablePadding="5dp"
                android:id="@+id/bottom_sheet_ward"
                android:text="@string/ward"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="18sp"
                android:textColor="@color/text_color_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:drawablePadding="5dp"
                android:text="@string/harvest_cc_center"
                android:textSize="18sp"
                android:id="@+id/bottom_sheet_village"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/text_color_black"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="145dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="@color/view_red"
            android:text="@string/cancel"
            android:textColor="@color/text_color_black"
            android:layout_marginEnd="@dimen/dimen_5dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="145dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="@color/view_green"
            android:baselineAligned="false"
            android:text="@string/confirm"
            android:textColor="@color/text_color_black"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:textSize="16sp" />


    </LinearLayout>


</LinearLayout>