<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/field_list_container"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:theme="@style/Theme.MsPlaybook">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/toolbar_linear_layout"
            android:padding="@dimen/dimen_5dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_hg_fragment"
                style="@style/Widget.MsPlaybook.Toolbar"
                android:layout_width="match_parent"
                android:background="@color/colorWhite"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_close"
                app:title="" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_field_r_id"
                android:text="@string/field_r_id"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_ik_number"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:text="@string/ik_number"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_member_name"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:text="@string/member_name"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_member_r_id"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:text="@string/member_r_id"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_phone_number"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:text="@string/member_phone_number"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_crop_type"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:text="@string/member_crop_type"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_field_size"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/field_size"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_village_name"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/member_village"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_hg_list"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:text="@string/rf_list_header"
                android:textSize="@dimen/dimen_17sp"
                android:textColor="@color/text_color_black"
                android:layout_marginBottom="@dimen/dimen_10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edlHGType"
                style="@style/ExposedDropdownMenu"
                android:paddingStart="@dimen/dimen_10dp"
                android:paddingEnd="@dimen/dimen_10dp"
                android:hint="@string/select_rf_type">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/actHGType"
                    android:editable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:hint="@string/activity_enter_date"
                android:id="@+id/tv_enter_date"
                android:padding="@dimen/dimen_10dp"
                android:maxLines="1"
                android:textSize="@dimen/dimen_20sp"
                android:background="@drawable/view_looks1"
                android:drawableEnd="@drawable/ic_calendar"
                android:textColor="@color/text_color_black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:id="@+id/tv_confirm_date"
                android:maxLines="1"
                android:textSize="@dimen/dimen_20sp"
                android:background="@drawable/view_looks1"
                android:padding="@dimen/dimen_10dp"
                android:drawableEnd="@drawable/ic_calendar"
                android:textColor="@color/text_color_black"
                android:hint="@string/activity_confirm_date"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTakePicture"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/view_blue"
                android:text="@string/take_picture" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_id"
                android:id="@+id/activityImage"
                android:layout_gravity="center"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddHGActivity"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/view_blue"
                android:text="@string/log_rf_activity" />

        </LinearLayout>

    </ScrollView>



</LinearLayout>