<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/confirmation_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_layout"
    android:orientation="vertical"
    android:padding="8dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_question"
        android:textSize="@dimen/dimen_25sp"
        android:textColor="@color/text_color_black"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_marginEnd="@dimen/dimen_20dp"
            style="?attr/materialButtonOutlinedStyle"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:textSize="16sp" />


    </LinearLayout>


</LinearLayout>